# cella

./: .gitignore  Cargo.toml  LICENSE  README.md  VISION.md  cella.toml  flake.nix  install.sh
.github/workflows/: release.yml
crates/cella/: Cargo.toml
crates/cella/src/: cell.rs  cli.rs  client.rs  config.rs  deploy.rs  exec.rs  git.rs  log.rs  main.rs  proxy.rs  remote.rs  secrets.rs  server.rs  ssh.rs  transport.rs  vm.rs  worktree.rs
crates/cellx/: Cargo.toml
crates/cellx/src/: flow_run.rs  main.rs  service.rs
crates/flow/: Cargo.toml
crates/flow/src/: lib.rs
nix/lib/: disk-bios.nix  disk-uefi.nix  mkCell.nix  mkHost.nix
nix/modules/: client.nix  host.nix  options.nix
nix/modules/guest/: base.nix
nix/modules/proxy/: cella_addon.py  nucleus_addon.py
src/: cell.rs  cli.rs  client.rs  config.rs  git.rs  log.rs  main.rs  proxy.rs  remote.rs  server.rs  transport.rs  vm.rs
